--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -7,9 +7,8 @@ pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
-#Qt5.x
-depends=('qt6-base' 'qt6-tools' 'qt5-base' 'qt5-tools' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip' 'mesa-amber' 'libglvnd')
-makedepends=('glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules' 'kio5')
+depends=('libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip' 'mesa-amber')
+makedepends=('qt6-base' 'qt6-tools' 'qt5-base' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules' 'kio5' 'libglvnd')
 conflicts=()
 replaces=()
 backup=()
