Arch Linux: package dependency fix

--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -7,8 +7,10 @@ pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
-depends=('libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip' 'mesa-amber')
-makedepends=('qt6-base' 'qt6-tools' 'qt5-base' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules' 'kio5' 'libglvnd')
+depends=('qt6-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
+depends_qt5=('qt5-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
+depends_osmesa=('mesa-amber' 'libglvnd' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
+makedepends=('qt6-tools' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules' 'kio5')
 conflicts=()
 replaces=()
 backup=()
