Alpine Linux: package dependency update

--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -8,8 +8,10 @@ url="http://github.com/tcobbs/ldview"
 arch="all"
 license="GPL"
 #Qt5.x
-depends="libpng libjpeg-turbo minizip tinyxml mesa-egl"
-makedepends="qt6-qtbase-dev qt6-qttools qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules minizip-dev tinyxml-dev"
+depends="qt6-qtbase libpng libjpeg-turbo minizip tinyxml"
+depends_qt5="qt5-qtbase libpng libjpeg-turbo minizip tinyxml"
+depends_osmesa="libpng libjpeg-turbo minizip tinyxml mesa-egl mesa-gl"
+makedepends="qt6-qtbase-dev qt6-qttools qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules minizip-dev tinyxml-dev mesa-dev"
 #source="ldview-git.tar.gz"
 subpackages="$pkgname-qt5 $pkgname-osmesa"
 options="!check"
