--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -8,8 +8,6 @@ url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
 depends=('qt6-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
-depends_qt5=('qt5-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
-depends_osmesa=('mesa-amber' 'libglvnd' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
 makedepends=('qt6-tools' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules' 'kio5')
 conflicts=()
 replaces=()
@@ -48,6 +46,7 @@ package_ldview() {
 }
 
 package_ldview-qt5() {
+  depends=('qt5-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
   test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   make INSTALL_ROOT="${pkgdir}" install
   cp -f LDView.qt5 ${pkgdir}/usr/bin/LDView
@@ -56,6 +55,7 @@ package_ldview-qt5() {
 }
 
 package_ldview-osmesa() {
+  depends=('mesa-amber' 'libglvnd' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
   test -d ${srcdir}/ldview-git/OSMesa && cd ${srcdir}/ldview-git/OSMesa || cd ../../OSMesa
   make PREFIX="${pkgdir}" install
 }
