--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -8,7 +8,7 @@ url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
 depends=('qt6-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
-makedepends=('qt6-tools' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules' 'kio5')
+makedepends=('qt6-tools' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules')
 conflicts=()
 replaces=()
 backup=()
@@ -26,14 +26,7 @@ build() {
   make ${MAKEFLAGS} clean
   make ${MAKEFLAGS} all
   cp -f LDView LDView.qt5
-  cd kde5
-  if [ -d build ]; then rm -rf build ; fi
-  mkdir -p build
-  cd build
-  if cmake -DCMAKE_INSTALL_PREFIX=/usr .. ; then
-    make ${MAKEFLAGS}
-  fi
-  cd ../../../OSMesa
+  cd ../OSMesa
   make ${MAKEFLAGS} all
 }
  
@@ -41,8 +34,6 @@ package_ldview() {
   test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   make INSTALL_ROOT="${pkgdir}" install
   cp -f LDView.qt6 ${pkgdir}/usr/bin/LDView
-  cd kde5/build
-  make DESTDIR="${pkgdir}" install
 }
 
 package_ldview-qt5() {
@@ -50,8 +41,6 @@ package_ldview-qt5() {
   test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
   make INSTALL_ROOT="${pkgdir}" install
   cp -f LDView.qt5 ${pkgdir}/usr/bin/LDView
-  cd kde5/build
-  make DESTDIR="${pkgdir}" install
 }
 
 package_ldview-osmesa() {
