Docker: AltLinux update [skip ci]

--- a/QT/docker/Dockerfile-alt_latest
+++ b/QT/docker/Dockerfile-alt_latest
@@ -4,7 +4,9 @@ FROM alt:latest
 ADD install-devel-packages.sh /
 RUN ./install-devel-packages.sh
 VOLUME /mnt/lego
-CMD yum update -x kernel* -y; \
-	cd ldview/QT ; \
+CMD cd ldview/QT ; \
 	git pull; \
-	./makerpm
+	mkdir -p /usr/src/RPM/BUILD ;\
+	chmod -R og+w /usr/src/RPM /ldview ;\
+	sed -Ei '/root ALL/s/#//g' /etc/sudoers ;\
+	sudo -u nobody rpmbuild -bb LDView.spec
