FreeBSD: use bunled lib3ds instead of standard

--- a/QT/freebsd/Makefile
+++ b/QT/freebsd/Makefile
@@ -12,8 +12,7 @@ WRKSRC_SUBDIR=	QT
 LIB_DEPENDS=	libOSMesa.so:graphics/osmesa \
 		libtinyxml.so:textproc/tinyxml \
 		libgl2ps.so:print/gl2ps \
-		libminizip.so:archivers/minizip \
-		lib3ds.so:graphics/lib3ds
+		libminizip.so:archivers/minizip
 USES=		qt:6 qmake gmake desktop-file-utils shared-mime-info
 USE_QT=	base
 QMAKE_ARGS+=	-spec freebsd-clang MANDIR=${PREFIX}/man/ DOCDIR=${STAGEDIR}${PREFIX}/share/doc/ldview/ SYSCONFDIR=${PREFIX}/etc
