--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -367,7 +367,7 @@ jobs:
       with:
         release: "15.0"
         run: |
-          pkg install -y git wget gmake gl2ps tinyxml libosmesa minizip desktop-file-utils shared-mime-info ccache qt6-base qt6-tools
+          pkg install -y git wget gmake gl2ps tinyxml libosmesa freeglut libglvnd minizip desktop-file-utils shared-mime-info ccache qt6-base qt6-tools
           git clone --depth 1 https://git.FreeBSD.org/ports.git /usr/ports
           cd QT/freebsd
           make GH_TAGNAME=$GITHUB_SHA WITH_CCACHE_BUILD=yes PORTREVISION="${{ github.run_number }}" fetch
