Qt: CMake upgrade to Qt6 [skip ci]

--- a/QT/CMakeLists.txt
+++ b/QT/CMakeLists.txt
@@ -3,8 +3,8 @@ project(LDView)
 
 set(OpenGL_GL_PREFERENCE LEGACY)
 
-find_package(QT NAMES Qt5 COMPONENTS Core REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Widgets OpenGL PrintSupport LinguistTools Network REQUIRED)
+find_package(QT NAMES Qt6 COMPONENTS Core REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Widgets OpenGL PrintSupport LinguistTools Network OpenGLWidgets REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(X11 REQUIRED)
 find_package(Threads REQUIRED)
@@ -71,6 +71,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_definitions(-D_NO_BOOST -D_QT -DHAVE_MINIZIP -DUSE_CPP11)
 add_definitions(-DEXPORT_3DS)
+add_definitions(-DQOPENGLWIDGET)
 add_definitions(${Qt${QT_VERSION_MAJOR}Gui_DEFINITIONS})
 add_definitions(${Qt${QT_VERSION_MAJOR}PrintSupport_DEFINITIONS})
 add_definitions(${Qt${QT_VERSION_MAJOR}OpenGL_DEFINITIONS})
@@ -81,17 +82,18 @@ include_directories(
 	${Qt${QT_VERSION_MAJOR}OpenGL_INCLUDE_DIRS}
 	${Qt${QT_VERSION_MAJOR}Network_INCLUDE_DIRS}
 	${Qt${QT_VERSION_MAJOR}PrintSupport_INCLUDE_DIRS}
+	${Qt${QT_VERSION_MAJOR}OpenGLWidgets_INCLUDE_DIRS}
 	${PNG_INCLUDE_DIRS}
 	${JPEG_INCLUDE_DIRS}
 )
 
 file(GLOB LDViewSources *.cpp *.h *.ui resources.qrc)
-qt5_add_resources(LDViewSources resources.qrc)
+qt6_add_resources(LDViewSources resources.qrc)
 add_executable(LDView ${LDViewSources})
 
 
 file(GLOB ts_files *.ts)
-qt5_add_translation(qm_files ${ts_files})
+qt6_add_translation(qm_files ${ts_files})
 
 target_link_libraries(LDView -L${CMAKE_SOURCE_DIR}/../TRE -lTRE-qt${QT_VERSION_MAJOR})
 target_link_libraries(LDView -L${CMAKE_SOURCE_DIR}/../LDLib -lLDraw-qt${QT_VERSION_MAJOR})
@@ -103,6 +105,7 @@ target_link_libraries(LDView ${GL2PS_LIBRARIES} ${TINYXML_LIBRARIES} ${MINIZIP_L
 target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::PrintSupport)
 target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::Network)
+target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::OpenGLWidgets)
 target_link_libraries(LDView ${QT_LIBRARIES})
 target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::OpenGL ${OPENGL_LIBRARIES})
 target_link_libraries(LDView ${X11_X11_LIB})
@@ -130,7 +133,7 @@ ExternalProject_Add(TCFoundation
 	SOURCE_DIR ${CMAKE_SOURCE_DIR}/../TCFoundation
 	CONFIGURE_COMMAND ""
 	BUILD_IN_SOURCE 1
-	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -D_QT\ -I/usr/include/qt5\ -DHAVE_MINIZIP\ -DUSE_CPP11
+	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -D_QT\ -I/usr/include/qt6\ -DHAVE_MINIZIP\ -DUSE_CPP11
 	INSTALL_COMMAND ""
 )
 
