RPM: optimize build-in-place

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -154,11 +154,10 @@ jobs:
       - name: Build LDView
         run:  |
           export PATH="/usr/lib64/ccache:$PATH"
-          cd QT
           mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
           echo '%_smp_mflags -j4' >> ~/.rpmmacros
-          sed -i "/Release/s/0\.1/0\.${{ github.run_number }}/g" LDView.spec
-          rpmbuild -bb --noprep --build-in-place --nodebuginfo -D "_ldview $(pwd)/.." LDView.spec
+          sed -i "/Release/s/0\.1/0\.${{ github.run_number }}/g" QT/LDView.spec
+          rpmbuild -bb --build-in-place --nodebuginfo QT/LDView.spec
       - name: Upload packages
         if: needs.prepare.outputs.tag != ''
         env:
@@ -196,11 +195,10 @@ jobs:
       - name: Build LDView
         run:  |
           export PATH="/usr/lib64/ccache:$PATH"
-          cd QT
           mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
           echo '%_smp_mflags -j4' >> ~/.rpmmacros
-          sed -i "/Release/s/0\.1/0\.${{ github.run_number }}/g" LDView.spec
-          rpmbuild -bb --noprep --build-in-place -D "_ldview $(pwd)/.." LDView.spec
+          sed -i "/Release/s/0\.1/0\.${{ github.run_number }}/g" QT/LDView.spec
+          rpmbuild -bb --build-in-place QT/LDView.spec
       - name: Upload packages
         if: needs.prepare.outputs.tag != ''
         env:
