Github Actions: Arch Linux ccache stat fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -312,7 +312,7 @@ jobs:
           ls -l ldview*pkg.tar.*
           rm -f ldview*debug*pkg.tar.*
       - name: CCache Statistics
-        run: ccache -sv
+        run: sudo -u nobody ccache -sv
       - name: Upload packages
         if: needs.prepare.outputs.tag != ''
         env:
