Github Actions: Arch Linux ccache fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -297,7 +297,7 @@ jobs:
         if: endsWith(github.ref, '/master')
         uses: actions/cache@v4
         with:
-          path: ~/.cache/ccache
+          path: /.cache/ccache
           key: arch
       - name: Build LDView
         run: |
