Alpine linux: dependency update

--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://github.com/tcobbs/ldview"
 arch="all"
 license="GPL"
-makedepends="qt6-qtbase-dev qt6-qttools qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules minizip-dev tinyxml-dev mesa-dev"
+makedepends="qt6-qtbase-dev qt6-qttools qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make minizip-dev tinyxml-dev mesa-dev"
 #source="ldview-git.tar.gz"
 subpackages="$pkgname-qt5 $pkgname-osmesa"
 options="!check"
