Linux: remove cmake dependency

--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -8,7 +8,7 @@ url="http://github.com/tcobbs/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
 depends=('qt6-base' 'libpng' 'libjpeg-turbo' 'gl2ps' 'tinyxml' 'minizip')
-makedepends=('qt6-tools' 'qt5-tools' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules')
+makedepends=('qt6-tools' 'qt5-tools' 'glu' 'gcc' 'make')
 conflicts=()
 replaces=()
 backup=()
