--- a/QT/debian/control
+++ b/QT/debian/control
@@ -2,7 +2,7 @@ Source: ldview
 Section: graphics
 Maintainer: Peter Bartfai <pbartfai@stardust.hu>
 Priority: optional
-Build-Depends: debhelper (>= 4.1.6), qtbase5-dev, qt5-qmake, libqt5opengl5-dev, cmake, libgl1-mesa-dev, libpng-dev, libglu-dev, libjpeg-dev, libosmesa6-dev, libegl-dev, libtinyxml-dev, libgl2ps-dev, extra-cmake-modules, qttools5-dev-tools, libminizip-dev, qt6-base-dev, qmake6, libqt6opengl6-dev, libqt6core5compat6-dev, linguist-qt6, qt6-l10n-tools
+Build-Depends: debhelper (>= 4.1.6), qtbase5-dev, qt5-qmake, libqt5opengl5-dev, libgl1-mesa-dev, libpng-dev, libglu-dev, libjpeg-dev, libosmesa6-dev, libegl-dev, libtinyxml-dev, libgl2ps-dev, qttools5-dev-tools, libminizip-dev, qt6-base-dev, qmake6, libqt6opengl6-dev, libqt6core5compat6-dev, linguist-qt6, qt6-l10n-tools
 Homepage: http://tcobbs.github.io/ldview
 Standards-Version: 3.9.8
 
